<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand" />

    <EditText
        android:id="@+id/edit_min_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/min_price" />

    <EditText
        android:id="@+id/edit_max_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_price" />

    <EditText
        android:id="@+id/edit_min_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/min_rating" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters" />
</LinearLayout>